--- a/web/modules/custom/oxbow_paragraphs/css/oxbow_paragraphs.layouts.css
+++ b/web/modules/custom/oxbow_paragraphs/css/oxbow_paragraphs.layouts.css
@@ -729,70 +729,74 @@
   }
 }
 
-/* line 81, ../sass/oxbow_paragraphs.layouts.scss */
-.layout-align-top.layout-columns,
-.layout-align-top .layout-columns,
-.layout-align-top .view-content,
-.layout-align-top .slick-track {
+/* line 82, ../sass/oxbow_paragraphs.layouts.scss */
+.layout-height-auto.layout-align-top.layout-columns, .layout-height-auto.layout-align-top .layout-columns, .layout-height-auto.layout-align-top .view-content, .layout-height-auto.layout-align-top .slick-track {
   -webkit-box-align: start;
   -ms-flex-align: start;
   align-items: flex-start;
 }
-
-/* line 89, ../sass/oxbow_paragraphs.layouts.scss */
-.layout-align-center.layout-columns,
-.layout-align-center .layout-columns,
-.layout-align-center .view-content,
-.layout-align-center .slick-track {
+/* line 90, ../sass/oxbow_paragraphs.layouts.scss */
+.layout-height-auto.layout-align-center.layout-columns, .layout-height-auto.layout-align-center .layout-columns, .layout-height-auto.layout-align-center .view-content, .layout-height-auto.layout-align-center .slick-track {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
 }
-
-/* line 97, ../sass/oxbow_paragraphs.layouts.scss */
-.layout-align-bottom.layout-columns,
-.layout-align-bottom .layout-columns,
-.layout-align-bottom .view-content,
-.layout-align-bottom .slick-track {
+/* line 98, ../sass/oxbow_paragraphs.layouts.scss */
+.layout-height-auto.layout-align-bottom.layout-columns, .layout-height-auto.layout-align-bottom .layout-columns, .layout-height-auto.layout-align-bottom .view-content, .layout-height-auto.layout-align-bottom .slick-track {
   -webkit-box-align: end;
   -ms-flex-align: end;
   align-items: flex-end;
 }
 
 /* line 108, ../sass/oxbow_paragraphs.layouts.scss */
-.layout-align-fill .layout-columns > * > *,
-.layout-align-fill .view-content > * > *,
-.layout-align-fill .slick-track > * > * {
+.layout-height-equal.layout-align-top .layout-columns [class*='layout-item'] > .paragraph, .layout-height-equal.layout-align-top .view-content .views-row > *, .layout-height-equal.layout-align-top .slick-track .slick-slide > .paragraph {
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  height: 100%;
+}
+/* line 116, ../sass/oxbow_paragraphs.layouts.scss */
+.layout-height-equal.layout-align-center .layout-columns [class*='layout-item'] > .paragraph, .layout-height-equal.layout-align-center .view-content .views-row > *, .layout-height-equal.layout-align-center .slick-track .slick-slide > .paragraph {
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  height: 100%;
+}
+/* line 124, ../sass/oxbow_paragraphs.layouts.scss */
+.layout-height-equal.layout-align-bottom .layout-columns [class*='layout-item'] > .paragraph, .layout-height-equal.layout-align-bottom .view-content .views-row > *, .layout-height-equal.layout-align-bottom .slick-track .slick-slide > .paragraph {
+  -webkit-box-align: end;
+  -ms-flex-align: end;
+  align-items: flex-end;
   height: 100%;
 }
 
-/* line 113, ../sass/oxbow_paragraphs.layouts.scss */
+/* line 134, ../sass/oxbow_paragraphs.layouts.scss */
 .layout-direction-ltr.layout-columns,
 .layout-direction-ltr .layout-columns,
 .layout-direction-ltr .view-content {
   flex-direction: row;
 }
 
-/* line 118, ../sass/oxbow_paragraphs.layouts.scss */
+/* line 139, ../sass/oxbow_paragraphs.layouts.scss */
 .layout-direction-rtl.layout-columns,
 .layout-direction-rtl .layout-columns,
 .layout-direction-rtl .view-content {
   flex-direction: row-reverse;
 }
 
-/* line 124, ../sass/oxbow_paragraphs.layouts.scss */
+/* line 145, ../sass/oxbow_paragraphs.layouts.scss */
 .layout-h-align-left,
 .layout-h-align-left .paragraph {
   text-align: left;
 }
 
-/* line 128, ../sass/oxbow_paragraphs.layouts.scss */
+/* line 149, ../sass/oxbow_paragraphs.layouts.scss */
 .layout-h-align-center,
 .layout-h-align-center .paragraph {
   text-align: center;
 }
 
-/* line 132, ../sass/oxbow_paragraphs.layouts.scss */
+/* line 153, ../sass/oxbow_paragraphs.layouts.scss */
 .layout-h-align-right,
 .layout-h-align-right .paragraph {
   text-align: right;
