--- a/web/modules/custom/oxbow_paragraphs/sass/_oxbow_paragraphs.view.scss
+++ b/web/modules/custom/oxbow_paragraphs/sass/_oxbow_paragraphs.view.scss
@@ -56,6 +56,12 @@
       }
     }
   }
+
+  &.view-background-true {
+    .views-row > * {
+      padding: map-get($paragraph-padding, m);
+    }
+  }
   
   &.layout-slideshow {
     
