--- a/web/themes/starter/sass/components/forms/_form--login.scss
+++ b/web/themes/starter/sass/components/forms/_form--login.scss
@@ -11,6 +11,7 @@ form[action*='bethelmennonite.ccbchurch.com/login'] {
   }
 
   a {
+    text-align: center;
     display: block;
     font-size: .7em;
   }
