--- a/web/themes/starter/sass/global/_colors.scss
+++ b/web/themes/starter/sass/global/_colors.scss
@@ -8,7 +8,7 @@ $charcoal    : #555555;
 $oil         : #333333;
 $black       : #000000;
 
-$bethel-purple: #8B3A7E;
+$bethel-purple: #72516c;
 $bethel-purple-1: #A8619D;
 $bethel-blue: #007178;
 $bethel-blue-1: #548395;
