--- a/web/modules/custom/oxbow_paragraphs/sass/oxbow_paragraphs.layouts.scss
+++ b/web/modules/custom/oxbow_paragraphs/sass/oxbow_paragraphs.layouts.scss
@@ -43,17 +43,20 @@ $col-w-min: 320px;
 }
 
 /// Breakpoints for Grid Layout Items
-.layout-grid > .layout-item_1-2 {
+.layout-grid > .layout-item_1-2,
+.layout-columns-2 .views-row {
   @media screen and (max-width: 500px) {
     @include column(100%);
   }
 }
-.layout-grid > .layout-item_1-3 {
+.layout-grid > .layout-item_1-3,
+.layout-columns-3 .view .view-content .views-row {
   @media screen and (max-width: 750px) {
     @include column(100%);
   }
 }
-.layout-grid > .layout-item_1-4 {
+.layout-grid > .layout-item_1-4,
+.layout-columns-4 .views-row {
   @media screen and (max-width: 750px) {
     @include column(100% * (1/2));
   }
@@ -61,7 +64,8 @@ $col-w-min: 320px;
     @include column(100%);
   }
 }
-.layout-grid > .layout-item_1-5 {
+.layout-grid > .layout-item_1-5,
+.layout-columns-5 .views-row {
   @media screen and (max-width: 750px) {
     @include column(100% * (1/3));
   }
@@ -69,12 +73,19 @@ $col-w-min: 320px;
     @include column(100% * (1/2));
   }
 }
-.layout-grid > .layout-item_1-6 {
+.layout-grid > .layout-item_1-6,
+.layout-columns-6 .views-row {
   @media screen and (max-width: 750px) {
     @include column(100% * (1/3));
   }
   @media screen and (max-width: 500px) {
     @include column(100% * (1/2));
+  }
+}
+.layout_2-3_1-3 > [class*='layout-item'],
+.layout_1-3_2-3 > [class*='layout-item'] {
+  @media screen and (max-width: 650px) {
+    @include column(100%);
   }
 }
 
