--- a/web/themes/starter/css/screen.css
+++ b/web/themes/starter/css/screen.css
@@ -5531,7 +5531,7 @@ html, body {
 
 /* line 6, ../sass/layout/_header.scss */
 #header {
-  background: #8B3A7E;
+  background: #72516c;
   position: relative;
   padding-top: 3.75rem;
 }
@@ -5543,7 +5543,7 @@ html, body {
   top: 0;
   z-index: 100;
   height: 3.75rem;
-  background: #8B3A7E;
+  background: #72516c;
   padding: 0.75rem 1.5rem;
 }
 /* line 22, ../sass/layout/_header.scss */
@@ -5754,7 +5754,7 @@ table caption {
   padding: 0.85em 1em;
   margin: 0 0 1rem 0;
   font-size: 0.9rem;
-  background-color: #8B3A7E;
+  background-color: #72516c;
   color: white;
   box-shadow: 0px 0px 5px 0 rgba(0, 0, 0, 0.25);
   color: white !important;
@@ -5768,7 +5768,7 @@ table caption {
 }
 /* line 121, ../foundation/bower_components/foundation-sites/scss/components/_button.scss */
 .button-secondary:hover, .button-secondary:focus {
-  background-color: #6f2e65;
+  background-color: #5b4156;
   color: white;
 }
 
@@ -6209,7 +6209,7 @@ form[action*='bethelmennonite.ccbchurch.com/login'] a {
 /* line 36, ../sass/components/menu/_menu--desktop.scss */
 #block-starter-main-menu > ul > li a.menu-alt {
   background: white;
-  color: #8B3A7E;
+  color: #72516c;
   padding: 0.375rem 0.75rem 0.375rem 0.63rem;
   border-radius: 3px;
 }
